# song_summary

./: .gitignore  Makefile  README.md  local.yml  pyproject.toml
apps/summarizer/: admin.py  tasks.py
apps/summarizer/migrations/: 0001_initial.py
apps/summarizer/models/: __init__.py  song.py
apps/summarizer/utils/: __init__.py  cache.py  gpt.py  musixmatch.py
config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
tests/test_utils/: test_get_lyrics.py
