[tool.poetry]
name = "song-summary"
version = "0.1.0"
description = "A test interview project for pulling up song lyrics and extracting country mentions."
authors = ["alexlinus <alexlinus93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2"
django-environ = "^0.11.2"
openai = "^1.51.2"
requests = "^2.32.3"
celery = "^5.4.0"
django-redis = "^5.4.0"

[tool.poetry.group.qa.dependencies]
pytest = "^8.3.3"
pytest-django = "^4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
